--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<img src = "img/Geirangerfjord.jpg" >
+<!DOCTYPE html>
+<html>
+ <body>
+   <h1> Hello World! </h1>
+   <img src = "img/Geirangerfjord.jpg" >
+  </body>
+</html>
+
