--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <body>
    <h1> Hello World! </h1>
-   <img src = "img/Geirangerfjord.jpg" >
+   <img src = "img/Geirangerfjord.jpg"  height = 900 px>
   </body>
 </html>
 
