--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
  <body>
-   <h1> Hello World! </h1>
+    <div class="navbar">
+  <a href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+</div>
+
+<div class="main">
+  <p>Some text some text some text some text..</p>
+</div>  
+  <h1> Hello World! </h1>
    <img src = "img/Geirangerfjord.jpg"  height = 700 px alt = Geirangerfjord, Norge>
   </body>
 </html>
