--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
  <body>
     <div class="navbar">
   <a href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+  <a href="#news">Repositories</a>
+  <a href="computerbuilds">Computer Builds</a>
 </div>
 
 <div class="main">
-  <p>Some text some text some text some text..</p>
+  <p>Welcome to my Github Site</p>
 </div>  
    /* The navigation bar */
 .navbar {
     overflow: hidden;
     background-color: #333;
-    position: fixed; /* Set the navbar to fixed position */
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
+    position: fixed; 
+    top: 0; 
+    width: 100%; 
 }
 
 /* Links inside the navbar */
