--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
  <body>
     <div class="navbar">
   <a href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+  <a href="#news">Repositories</a>
+  <a href="computerbuilds">ComputerBuilds</a>
 </div>
 
 <div class="main">
-  <p>Some text some text some text some text..</p>
+  <p>Welcome to my Github site where I document my adventures through the world of computing.</p>
 </div>  
    
   <h1> Hello World! </h1>
