--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <div class="navbar">
   <a href="#home">Home</a>
   <a href="#news">Repositories</a>
-  <a href="computerbuilds">ComputerBuilds</a>
+  <a href="computerbuilds/ComputerBuilds.html">ComputerBuilds</a>
 </div>
 
 <div class="main">
