--- a/computerbuilds/ComputerBuilds.html
+++ b/computerbuilds/ComputerBuilds.html
@@ -30,32 +30,34 @@ padding : 5px;
 </head>
 <body>
 <pre><div class = "list">
-COMPUTER BID - Caleb Thomas
+Sample Computer Builds - Caleb Thomas
 * * * * * * * * * * * * * * * * * * * * * * * * * *
-$1000 Computer
-$ 125 ASUS TUF H370-Pro Gaming (WI-FI) Motherboard - Newegg
-$ 319 Intel Core i7-8700 Processor (Intel or AMD) - Newegg
-$ 80 WD Blue 3D NAND WDS500G2B0B 500GB Harddrve (SSD, M.2, PCIe or your choice.) -Amazon
-$ 130 HGST Deskstar NAS  0S04005 4TB Harddrive (SATA 6.0GB/s) - Newegg
-$ 80 Seasonic FOCUS Plus Series SSR-750FX 750W Power supply. - Newegg
-$ 200 G.Skill Aegis 32GB F4-2400C17D-32GIS (2 x 16GB) DDR4 2666 RAM - Newegg
-$ 70 NZXT H500 CASE - NZXT
+$1000 Computer designed for working with Virtual Machines
+ $ 125 ASUS TUF H370-Pro Gaming (WI-FI) Motherboard - Newegg
+ $ 319 Intel Core i7-8700 Processor (Intel or AMD) - Newegg
+ $ 80 WD Blue 3D NAND WDS500G2B0B 500GB Harddrve (SSD, M.2, PCIe or your choice.) -Amazon
+ $ 130 HGST Deskstar NAS  0S04005 4TB Harddrive (SATA 6.0GB/s) - Newegg
+ $ 80 Seasonic FOCUS Plus Series SSR-750FX 750W Power supply. - Newegg
+ $ 200 G.Skill Aegis 32GB F4-2400C17D-32GIS (2 x 16GB) DDR4 2666 RAM - Newegg
+ $ 70 NZXT H500 CASE - NZXT
+ +___
 $ 1004 TOTAL WITHOUT TAX
-The $4 overage could esily be rectified by substituting a $4 cheaper hard drive
+The $4 overage could esily be rectified by substituting a $4 cheaper hard drive or waiting for a sale on a component.
+
+
 * * * * * * * * * * * * * * * * * * * * * * * * * *
-$2500 Computer
-$ 170 SUS TUF Z390 Plus Gaming Motherboard - Newegg
-$ 419 Intel Core i7-9700K Processor - Newegg
-$ 140 Corsair H115i Pro 280mm liquid CPU cooler - Newegg
-$ 270 Intel Optane SSD 900P 280GB PCIe SSD - Newegg
-$ 130 HGST Deskstar NAS  0S04005 4TB Harddrive (SATA 6.0GB/s) - Newegg
-$ 170 EVGA SuperNOVA 1000 P2 220-P2-1000-XR 80+ PLATINUM 1 kW Power Supply.
-$ 250 CORSAIR Vengeance LPX 32GB CMK32GX4M4A2666C16 RAM (16GB minimum) - Newegg
-$ 70  NZXT H500 CASE - NZXT
-$ 849 EVGA GeForce RTX 2080 XC ULTRA GAMING 08G-P4-2183-KR Video card - Newegg
+$2500 Workstation intended for moderate intensity gaming and amateur CAD work
+ $ 170 SUS TUF Z390 Plus Gaming Motherboard - Newegg
+ $ 419 Intel Core i7-9700K Processor - Newegg
+ $ 140 Corsair H115i Pro 280mm liquid CPU cooler - Newegg
+ $ 270 Intel Optane SSD 900P 280GB PCIe SSD - Newegg
+ $ 130 HGST Deskstar NAS  0S04005 4TB Harddrive (SATA 6.0GB/s) - Newegg
+ $ 170 EVGA SuperNOVA 1000 P2 220-P2-1000-XR 80+ PLATINUM 1 kW Power Supply.
+ $ 250 CORSAIR Vengeance LPX 32GB CMK32GX4M4A2666C16 RAM (16GB minimum) - Newegg
+ $ 70  NZXT H500 CASE - NZXT
+ $ 849 EVGA GeForce RTX 2080 XC ULTRA GAMING 08G-P4-2183-KR Video card - Newegg
++_____
 $ 2468 TOTAL WITHOUT TAX
-LIST WHERE PARTS WHERE PURCHASED
-If you go over budget please documents the reason.
 * * * * * * * * * * * * * * * * * * * * * * * * * *
 </div>
 </pre>
