--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
  <body>
     <div class="navbar">
-  <a href="#home">Home</a>
-  <a href="#news">Repositories</a>
+  <a href="index.html">Home</a>
+  <a href="https://github.com/cmtthomas">Repositories</a>
   <a href="computerbuilds/ComputerBuilds.html">ComputerBuilds</a>
 </div>
 
