--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <div class="navbar">
   <a href="index.html">Home</a>
   <a href="https://github.com/cmtthomas">Repositories</a>
-  <a href="computerbuilds/ComputerBuilds.html">Computer Builds</a>
+  <a href="budgetbuild.html" target=_blank> Budget Computer</a>
+  <a href="dreambuild.html" target=_blank> Dream Computer</a>
 </div>
 
 <div class="main">
   <p>Welcome to my Github site where I document my adventures through the world of computing.</p>
-</div>  
-   
+</div>
+
   <h1> Hello World! </h1>
    <img src = "img/Geirangerfjord.jpg"  height = 700 px alt = Geirangerfjord, Norge>
   </body>
