--- a/dreambuild.html
+++ b/dreambuild.html
@@ -28,7 +28,7 @@ magenta #d33682 violet #6c71c4 blue #268bd2 cyan #2aa198 green #859900
 <body>
 <img src = "img/intel.png" height = "200px">
 <P> This build reflects the hardware that I would purchase should I find myself simultaneously in need of a computer and in posession of an extraordinarily large sum of money.
-    If cost savings were desired, going with a more mainstream SSD and derated graphics card would lower the cost considerably.
+    If cost savings were desired, going with a more mainstream SSD and/or downgrading the graphics card would lower the cost considerably.
  </p>
 <div class="container">
  <div>$170 - Motherboard <br /> $ Z390 Plus Gaming (WI-FI) - Newegg</div>
