--- a/dreambuild.html
+++ b/dreambuild.html
@@ -39,7 +39,7 @@ magenta #d33682 violet #6c71c4 blue #268bd2 cyan #2aa198 green #859900
 
  <div>$250 - Memory <br /> Corsair Vengence LPX CMK32GX4M4A2666C16 DDR4-2666 32GB (2 x 16GB) -Newegg </div>
 
- <div>$ - Graphics Card <br /> EVGA GeForce RTX 2080 XC ULTRA GAMING 08G-P4-2183-KR -Newegg </div>
+ <div>$849 - Graphics Card <br /> EVGA GeForce RTX 2080 XC ULTRA GAMING 08G-P4-2183-KR -Newegg </div>
 
  <div>$170 - Power Supply <br /> EVGA SuperNOVA 1000 P2 220-P2-1000-XR 80+ PLATINUM 1 kW- Newegg </div>
 
