--- a/dreambuild.html
+++ b/dreambuild.html
@@ -31,7 +31,7 @@ magenta #d33682 violet #6c71c4 blue #268bd2 cyan #2aa198 green #859900
     If cost savings were desired, going with a more mainstream SSD and/or downgrading the graphics card would lower the cost considerably.
  </p>
 <div class="container">
- <div>$170 - Motherboard <br /> Z390 Plus Gaming (WI-FI) - Newegg</div>
+ <div>$170 - Motherboard <br /> ASUS TUF Z390 Plus Gaming (WI-FI) - Newegg</div>
 
  <div>$419 - CPU <br />Intel Core i7-9700K Processor -Newegg </div>
 
