--- a/budgetbuild.html
+++ b/budgetbuild.html
@@ -29,11 +29,11 @@ magenta #d33682 violet #6c71c4 blue #268bd2 cyan #2aa198 green #859900
 <img src = "img/intel.png" height = "200px">
 <P> This is a sample computer build designed for use as a virtualization workstation. </p>
 <div class="container">
- <div>$125 - Motherboard <br /> $ ASUS TUF H370-Pro Gaming (WI-FI) - Newegg</div>
+ <div>$125 - Motherboard <br /> ASUS TUF H370-Pro Gaming (WI-FI) - Newegg</div>
 
  <div>$319 - CPU <br />Intel Core i7-8700 Processor -Newegg </div>
 
- <div>$200 - Memory <br /> G.Skill Aegis DDR$-2666 F4-2400C17D-32GIS 32GB (2 x 16GB) -Newegg </div>
+ <div>$200 - Memory <br /> G.Skill Aegis DDR4-2666 F4-2400C17D-32GIS 32GB (2 x 16GB) -Newegg </div>
 
  <div>$80 - Power Supply <br /> Seasonic FOCUS Plus Series SSR-750FX 750W - Newegg </div>
 
