--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <a href="https://github.com/cmtthomas">Repositories</a>
   <a href="budgetbuild.html" target=_blank> Budget Computer</a>
   <a href="dreambuild.html" target=_blank> Dream Computer</a>
-  <a href="https://docs.google.com/presentation/d/1dsWnKrFTjOSxNmMMFOzJ0Qvqq2_P44P801F_TgEtpPA/edit?usp=sharing" target=_blank> OSI Presentation</a>
+  <a href="https://docs.google.com/presentation/d/12GsfeZ80mnMgABtlRJdRl_MEzbkn_9aV2DYgafu1-AU/edit?usp=sharing" target=_blank> EOY Presentation</a>
 </div>
 
 <div class="main">
