--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <a href="budgetbuild.html" target=_blank> Budget Computer</a>
   <a href="dreambuild.html" target=_blank> Dream Computer</a>
   <a href="https://docs.google.com/presentation/d/12GsfeZ80mnMgABtlRJdRl_MEzbkn_9aV2DYgafu1-AU/edit?usp=sharing" target=_blank> EOY Presentation</a>
+  <a href="HAB.html" target=_blank> HAB Cut Down</a>   
 </div>
 
 <div class="main">
