--- a/HAB.html
+++ b/HAB.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
  <body>
-   <H1> Testing... </H1>
+   <div class="navbar">
+  <a href="index.html">Home</a>
+  <a href="https://github.com/cmtthomas">Repositories</a>
+  <a href="budgetbuild.html" target=_blank> Budget Computer</a>
+  <a href="dreambuild.html" target=_blank> Dream Computer</a>
+  <a href="https://docs.google.com/presentation/d/12GsfeZ80mnMgABtlRJdRl_MEzbkn_9aV2DYgafu1-AU/edit?usp=sharing" target=_blank> EOY Presentation</a>
+  <a href="HAB.html" target=_blank> HAB Cut Down</a>   
+</div> 
+  
+  <H1> Testing... </H1>
   </body>
 </html>
